--- a/src/components/custom/CommandInput/CommandInput.module.css
+++ b/src/components/custom/CommandInput/CommandInput.module.css
@@ -16,7 +16,7 @@
         left: 0;
         width: 100vw;
         height: 100vh;    
-        @apply bg-slate-800;
+        @apply bg-zinc-900;
         opacity: 0.5;
         z-index: -1;
     }
@@ -25,7 +25,7 @@
         width: 50vw;
         height: fit-content;
         margin-top: 10%;
-        @apply rounded-lg bg-slate-100 dark:bg-slate-800;
+        @apply rounded-lg ;
     }
 
     .inputContainer {
